<resources>
    <string name="app_name">Rent ACar</string>
    <string name="price">Price :</string>
    <string name="compact">Compact</string>
    <string name="car">car</string>
    <string name="pick_the_date">Pick The Date</string>
    <string name="number_of_days">Enter The Number Of Days</string>
    <string name="continue_">Continue</string>
    <string name="mini">Mini</string>
    <string name="select">Select</string>
    <string name="enter_your_contact_number">Enter Your Contact Number</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="automatic">Automatic</string>
    <string name="seats">Seats</string>
    <string name="bags">Bags</string>
    <string name="model">Model</string>
    <string name="category">Category</string>
    <string name="price_for_a_day">Price For A Day</string>

    <string name="card1">Name on card</string>
    <string name="card01">Ex:-John</string>
    <string name="card2">Card Number</string>
    <string name="card02">XXXX XXXX XXXX XXXX</string>
    <string name="card3">Card Expiry Date</string>
    <string name="card4">Month</string>
    <string name="card5">Year</string>
    <string name="card6">CVC</string>
    <string name="btn01">Cancel</string>
    <string name="btn02">Pay</string>
    <string name="msg01">Thank you for choosing our services!</string>
    <string name="btn03">Home</string>

    <string name="Question">Question</string>
    <string name="Answer">Answer</string>
    <string name="add">Add</string>


</resources>